--- a/src/Taskbar/components/Calendar/Weather/components/WeatherHeader/WeatherHeader.module.scss
+++ b/src/Taskbar/components/Calendar/Weather/components/WeatherHeader/WeatherHeader.module.scss
@@ -28,7 +28,7 @@
         // align-items: end;
         .temp{
             // font-size: 24px;
-            color: #49ABD4;
+            color: rgb(var(--accent-color));
         }
     }
 }
